[gd_scene load_steps=7 format=3 uid="uid://cxvj2ve1ppkd7"]

[ext_resource type="PackedScene" uid="uid://cb8j1fhf1k0jv" path="res://scenes/backgrounds/Background LVL 4.tscn" id="1_8ln24"]
[ext_resource type="Script" uid="uid://cymlfs3dexf1v" path="res://scenes/menu_container.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://flvfsf6agxwx" path="res://art/Start Cloud.png" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://b24v8q8sffu6d" path="res://art/Title Cloud.png" id="2_wu84c"]
[ext_resource type="Texture2D" uid="uid://nmvwl2b7hd74" path="res://art/Exit Cloud.png" id="4_8ln24"]
[ext_resource type="AudioStream" uid="uid://dib2gdf7mbqth" path="res://sounds/Relaxing.mp3" id="6_rtw2f"]

[node name="MainMenu" type="CanvasLayer"]

[node name="Node2D" parent="." instance=ExtResource("1_8ln24")]

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.5
offset_top = -223.5
offset_right = 196.5
offset_bottom = 223.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("1_ekxnf")

[node name="Title" type="TextureRect" parent="MenuContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_wu84c")

[node name="Start" type="TextureButton" parent="MenuContainer"]
layout_mode = 2
texture_normal = ExtResource("1_l6cm7")

[node name="Exit" type="TextureButton" parent="MenuContainer"]
layout_mode = 2
texture_normal = ExtResource("4_8ln24")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_rtw2f")
volume_db = -20.0
autoplay = true

[node name="Label" type="Label" parent="."]
offset_left = 216.0
offset_top = 174.0
offset_right = 352.0
offset_bottom = 199.0
text = "Counting sheep..."

[connection signal="mouse_entered" from="MenuContainer/Start" to="MenuContainer" method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="MenuContainer/Start" to="MenuContainer" method="_on_start_mouse_exited"]
[connection signal="mouse_entered" from="MenuContainer/Exit" to="MenuContainer" method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="MenuContainer/Exit" to="MenuContainer" method="_on_exit_mouse_exited"]
